_nbgrader.log
[ReleaseApp | WARNING] No nbgrader_config.py file found (rerun with --debug to see where nbgrader is looking)
[ReleaseApp | ERROR] Must provide assignment name:
    nbgrader <command> ASSIGNMENT [ --course COURSE ]
[ReleaseApp | ERROR] Exception while loading config file /Users/simon/Google Drive/TEALS/Semester 2/Jupyter Notebooks/introduction-to-computer-science-semester2/nbgrader_config.py
    Traceback (most recent call last):
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/Users/simon/anaconda/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/Users/simon/Google Drive/TEALS/Semester 2/Jupyter Notebooks/introduction-to-computer-science-semester2/nbgrader_config.py", line 1
        %%file nbgrader_config.py
        ^
    SyntaxError: invalid syntax
[ReleaseApp | ERROR] Exception while loading config file /Users/simon/Google Drive/TEALS/Semester 2/Jupyter Notebooks/introduction-to-computer-science-semester2/nbgrader_config.py
    Traceback (most recent call last):
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/Users/simon/anaconda/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/Users/simon/Google Drive/TEALS/Semester 2/Jupyter Notebooks/introduction-to-computer-science-semester2/nbgrader_config.py", line 1
        %%file nbgrader_config.py
        ^
    SyntaxError: invalid syntax
[NbGraderApp | ERROR] Exception while loading config file /Users/simon/Google Drive/TEALS/Semester 2/Jupyter Notebooks/introduction-to-computer-science-semester2/nbgrader_config.py
    Traceback (most recent call last):
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/Users/simon/anaconda/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/Users/simon/anaconda/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/Users/simon/Google Drive/TEALS/Semester 2/Jupyter Notebooks/introduction-to-computer-science-semester2/nbgrader_config.py", line 1
        %%file nbgrader_config.py
        ^
    SyntaxError: invalid syntax
[ReleaseApp | ERROR] Must provide assignment name:
    nbgrader <command> ASSIGNMENT [ --course COURSE ]
